2005-01-08 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py (CommandLineReport.parse_option_str):
	Fix PluginMgr lists.
	* src/plugins/CustomBookText.py: Convert to new scheme.
	* src/plugins/FamilyGroup.py: Switch from handle to id for spouse.
	* src/plugins/SimpleBookTitle.py: Cleanups.

2005-01-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: removal of more OptionMenus in favor
	of ComboBoxes
	* src/GrampsCfg.py: use new ComboBoxes
	* src/DateHandler.py: fix set_format vs. formats bug

2005-01-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py: Use doc lists from PluginMgr.
	* src/Exporter.py: Use exports list from PluginMgr.
	* src/plugins/BookReport.py: Import Plugins module.
	* src/NameEdit.py (NameEditor.__init__): Typos.

	* src/plugins/SimpleBookTitle.py: Convert to new scheme.
	* src/docgen/LPRDoc.py: Support photo alignments. 
	* src/Report.py: Fix interface creation order.

2005-01-07 Eero Tamminen <eerot@sf>
	* src/Makefile.am: Added GrampsKeys.py and GrampsIniKeys.py so
	  that Gramps starts up after installation

2005-01-06 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgeHandler.py: Support for WEB for CLI mode.
	* src/Report.py: Support for WEB reports.
	* src/plugins/GraphViz.py: Minor tweaks.
	* src/plugins/WebPage.py: Convert to new scheme. Still rough.

2005-01-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: switch to ComboBox from OptionMenu
	* src/GenericFilter.py: switch to ComboBox from OptionMenu
	* src/Marriage.py: switch to ComboBox from OptionMenu
	* src/PeopleView.py: switch to ComboBox from OptionMenu
	* src/gramps.glade:switch to ComboBox from OptionMenu
	* src/gramps_main.py: switch to ComboBox from OptionMenu
	* src/const.py.in: add support for overriding gconf usage
	* src/GrampsIniKeys.py: provide support for the default schema
	* src/GrampsKeys.py: select appropriate backend
	* various: switch from GrampsGconfKeys to GrampsKeys for normal usage
